# rttui

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: color.rs  config.rs  lib.rs  main.rs
src/ping/: icmp.rs  mod.rs  udp.rs
src/ui/: app.rs  footer.rs  graph.rs  header.rs  legend.rs  mod.rs  settings.rs
