[package]
name = "pinggraph"
version = "0.1.0"
edition = "2024"
description = "A visual ping graph CLI tool with 256-color terminal support"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# ICMP ping
ping-rs = "0.1"

# Time utilities
chrono = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

[[bin]]
name = "pinggraph"
path = "src/main.rs"
